[package]
name = "subsonic"
version = "0.1.0"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "*"
subtle = "*"
num_cpus = "*"
crossbeam-utils = "*"

[dependencies.rand_core]
version = "0.5"
features = ["std"]

[dev-dependencies]
hex-literal = "0.1"
rand_xorshift = "0.2"
sha2 = "0.8"
