[package]
name = "halo"
version = "0.1.0"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <jack@z.cash>",
    "Daira Hopwood <daira@jacaranda.org>",
]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
backtrace = { version = "0.3", optional = true }
byteorder = "*"
subtle = "*"
num_cpus = "*"
crossbeam-utils = "*"

[dependencies.rand_core]
version = "0.5"
features = ["std"]

[dev-dependencies]
hex-literal = "0.1"
rand_xorshift = "0.2"
sha2 = "0.8"
uint = "0.8"

[features]
gadget-traces = ["backtrace"]
